[package]
name = "aion"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
anyhow = "1.0"
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4.1"
game-loop = { version = "1.0.0" , features = ["winit"] }
hecs = "0.10.3"
log = "0.4"
nalgebra-glm = "0.18.0"
pixels = "0.13"
procfs = "0.15.1"
rand = "0.8.5"
rodio = "0.17.3"
winit = "0.28"
winit_input_helper = "0.14"

[profile.release]
debug = true
